@@ -476,6 +476,16 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|stats
+operator|.
+name|setQueueLength
+argument_list|(
+name|childNames
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|String
@@ -608,6 +618,16 @@ argument_list|,
 literal|true
 argument_list|)
 decl_stmt|;
+name|stats
+operator|.
+name|setQueueLength
+argument_list|(
+name|childNames
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|String
